add: modul categories & products and update modul users
