# apps/api/internal/modules/categories/service.go
@@ -1,0 +1,11 @@
+package categories
+
+type Service interface {
+	// Add business logic methods here if needed
+}
+
+type categoryService struct{}
+
+func NewService() Service {
+	return &categoryService{}
+}
